--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,20 +1,20 @@
 <a href="/">Back To Home Page</a> <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a>
 
 <section>
-  <h2>Search a Book!</h2>
+  <h2>Search for a Book to add into your Library!</h2>
 
-  <form class="new-post-form">
+  <form class="book-search-form">
     <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" placeholder="Your title here" autocomplete="off"/>
+      <label for="book-title">Book Title</label>
+      <input type="text" id="book-title" name="book-title" placeholder="Book Title" autocomplete="off"/>
     </div>
     <div>
-      <label for="post-url">Link To Article</label>
-      <input id="post-url" name="post-url" placeholder="https://www.example.com" autocomplete="off"/>
+      <label for="author">Author Name</label>
+      <input id="author" name="author" placeholder="Author Name" autocomplete="off"/>
     </div>
     <button type="submit" class="btn">Search</button>
-    <p class="hide-before-error" id="post-err">
-      Type something to make a post!
+    <p class="hide-before-error" id="search-err">
+      Enter something in the search fields!
     </p>
   </form>
 </section>
@@ -33,4 +33,4 @@
   </ol>
 </section>
 {{/if}}
-<script src="/javascript/add-post.js"></script>
+<script src="/javascript/search-book.js"></script>
