--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,9 @@
         </h1>
         <nav>
           {{#if loggedIn}}
-          <a href="/dashboard">Dashboard</a>
+          <a href="/dashboard">Clubs Page</a>
+          <a href="/library">My Library</a>
+          <a href="/search">Book Search</a> 
           <!-- logout button style -->
           <button id="logout" class="btn-style">Logout</button>
           {{else}}
