trying to render book search results

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,9 @@
         </h1>
         <nav>
           {{#if loggedIn}}
-          <a href="/dashboard">Clubs Page</a>
-          <a href="/library">My Library</a>
-          <a href="/search">Book Search</a> 
+          <a href="/clubs-page">Clubs Page</a>
+          <a href="/my-library">My Library</a>
+          <a href="/book-search">Book Search</a> 
           <!-- logout button style -->
           <button id="logout" class="btn-style">Logout</button>
           {{else}}
