--- a/views/partials/book-info.handlebars
+++ b/views/partials/book-info.handlebars
@@ -16,7 +16,7 @@
         </div>
         <div class="book-authors">
           <span>
-            {{!-- not sure how this will work if this is an array --}}
+            {{!-- authors --}}
             Authors: {{authors}}
           </span>
         </div>
