almost done with front end to send data to back end for adding books to user's library

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,44 @@
   display: block;
   color: red;
 }
+
+#add-btn-1 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-2 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-3 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-4 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-5 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-6 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-7 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-8 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-9 {
+  cursor: pointer;
+  background-color: grey;
+}
+#add-btn-10 {
+  cursor: pointer;
+  background-color: grey;
+}
