--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,1 +1,17 @@
 <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a>
+
+<section class="library-container">
+  <div class="header">
+    <h2>
+      Your Library Book Collection
+    </h2>
+  </div>
+  <div class="user-books">
+    USER BOOKS ALL DISPLAYED HERE ITERATED THROUGH THE BOOKS ARRAY 
+    USING HANDLEBARS RENDERING RESPONSE IN THE ROUTE >> OF AN OBJECT THAT HAS A PROPERTY AS AN ARRAY AND 
+    REFER TO THE PROPERTY IN THE HANDLEBARS FILE THAT HAS THE ARRAY OF OBJECTS AND GET PROPERTIES OF THOSE OBJECTS
+    {{!-- showing each book inside the user's library --}}
+    {{!-- User.findOne by id and render out the books array passed into handlebars --}}
+    {{!-- USER BOOK LIBRARY PARTIAL WILL GO HERE --}}
+  </div>
+</section>
