able to add books, view them all on the my-library page, able to delete books on my-library page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
+.border-top {
+  border-top: solid 10px black;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
 .hide-before-error {
   display: none;
   color: red;
