starting on the clubs page

--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,4 +1,4 @@
-<a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a>
+{{!-- <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a> --}}
 
 <section class="library-container">
   <div class="club-container">
@@ -7,7 +7,7 @@
     </h2>
     <p class="members">
       {{!-- pass in members array of associated club --}}
-      club members: {{members}}
+      {{!-- club members: {{members}} --}}
       {{!-- member names are links to look at another users library? will have to be a different page and include books they read and their group association --}}
     </p>
     {{!-- <div class="not-in-these-clubs">maybe?
