--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,5 +1,8 @@
 {{!-- <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a> --}}
-
+<a href="/clubs-page">Clubs Page</a>
+<a href="/my-library">My Library</a>
+<a href="/book-search">Book Search</a> 
+<a href="/">Back to Homepage</a>
 <section class="library-container">
   <div class="club-container">
     <h2 class="club-name">
@@ -35,3 +38,4 @@
   {{/if}}
   </div>
 </section>
+<script src="/javascript/logout.js"></script>
