--- a/views/partials/user-book-library.handlebars
+++ b/views/partials/user-book-library.handlebars
@@ -24,4 +24,4 @@
   </div>
 </section>
 {{/each}}
-<script src="/javascript/delete-book.js"></script>
+{{!-- <script src="/javascript/delete-book.js"></script> --}}
