--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,10 @@
+
+
 {{#if loggedIn}}
+<a href="/clubs-page">Clubs Page</a>
+<a href="/my-library">My Library</a>
+<a href="/book-search">Book Search</a> 
+<a href="/homepage">HomePage</a>
 <h2>Welcome back, <span class="username">{{username}}</span> </h2>
 {{/if}}
 {{!-- <h2>Search a book!</h2> --}}
@@ -9,3 +15,4 @@
   </li>
   {{/each}}
 </ol>
+<script src="/javascript/logout.js"></script>
