fixing some other bugs and starting on the clubs page rendering

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
   </div>
   <div>
     <p class="hide-before-error" id="login-err">
-      Your login credentials were entered in the wrong format!
+      Your login credentials were incorrect or entered in the wrong format!
     </p>
   </div>
 </form>
@@ -31,7 +31,7 @@
   </div>
     <div>
     <p class="hide-before-error" id="signup-err">
-      Your credentials we're either in the wrong format, or that username and/or email is already taken!
+      Your credentials we're either in the wrong format, or that username is already taken!
     </p>
   </div>
 </form>
