--- a/views/partials/user-book-library.handlebars
+++ b/views/partials/user-book-library.handlebars
@@ -15,7 +15,7 @@
     {{/if}}
   </div>
   <form method="GET" action="/my-library/delete-book">
-    <button id="book-{{id}}" name="book" type="submit" value="{{id}}">Delete From Library</button>
+    <button class="pointer" id="book-{{id}}" name="book" type="submit" value="{{id}}">Delete From Library</button>
   </form>
   {{!-- VERY IMPORTANT dont add any more attributes to the left of id!!! if you must add one put it to the right of id!! --}}
   {{!-- <button type="book-{{id}}" class="pointer">Delete from Library</button> --}}
