--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <title>Book Club</title>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&family=Special+Elite&display=swap" rel="stylesheet">
   <link rel="stylesheet" href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
@@ -24,17 +25,31 @@
         <a href="/book-search">Book Search</a>
         <!-- logout button style -->
         <button id="logout" class="btn-style">Logout</button>
-        {{else}}
-        <a href="/login">Login</a> Or
-        <a href="/login">Sign Up!</a>
-        {{/if}}
-      </nav>
+        </nav>
+     {{else}}
+      <a href="/login">Login</a> 
     </header>
 
+       
+        
+        {{!-- <div class="box">
+          
+      
+        
+        
+        </div> --}}
+        <p class="box">Welcome to Book Club! This app allows you to explore the world of books and join book clubs at the same time.
+          Search books from an extensive library to find the perfect new read and even add it to your own personal library. 
+          You can also choose from a variety of different clubs based on genres that peak your interest and provides you with different book suggestions.
+          If you'd like to join wide world of books, please <a href="/login">Sign Up!</a></p>
+
+        {{/if}}
+       
+
     
-    <div class="box">
+    {{!-- <div class="box">
     <div><h2>Description</h2></div>
-    </div>
+    </div> --}}
     
     
     <main>
