--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,10 @@
 font-family: 'Josefin Slab', serif; */
 
 :root {
-  --main-color: #2C3E50; 
-  --second: #95A5A6; 
-  --third: #95A5A6; 
-  --fourth: #ECF0F1; 
+  --main-color: #2c3e50;
+  --second: #95a5a6;
+  --third: #95a5a6;
+  --fourth: #ecf0f1;
 }
 
 .border-top {
@@ -72,51 +72,72 @@ font-family: 'Josefin Slab', serif; */
 
 /* styling for splash page */
 
-a:hover, a:visited, a:link, a:active
-{
-    text-decoration: none;
-    color: white;
-    
+a:hover,
+a:visited,
+a:link,
+a:active {
+  text-decoration: none;
+  font-family: 'Special Elite', cursive;
+  color: white;
 }
 
 header {
   text-align: center;
   /* background: white; */
   /* opacity: 0.2; */
-  font-family: 'Special Elite', cursive;
-  color: white;
-  padding-top: 20px;
+  /* font-family: "Special Elite", cursive; */
+  /* font-weight: bold; */
+  /* color: var(--main-color);
+  -webkit-text-stroke: 1px var(--fourth); */
+  padding-top: 50px;
 }
+
+/* .nav-styling {
+  color: var(--main-color);
+  -webkit-text-stroke: 2px var(--fourth);
+  font-family: "Special Elite", cursive;
+} */
+
 body {
   background-color: black;
-  background-image: url('project2-7.jpg');
+  background-image: url("project2-7.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.box {
-  height: 50px;
-  width: 500px;
-  background-color: #555;
-  /* text-align: center;
-  padding: 100px;
+.description-box {
+  /* height: 50px;
+  width: 500px; */
+  /* background-color: #555; */
+  background-color: black;
+  text-align: center;
+  /* padding: 100px;
   margin: 200px;
   margin-left:400px; */
-  
-  /* opacity: 0.7; */
+  margin: 20%;
+  opacity: 0.7;
+  color: var(--fourth);
+  /* -webkit-text-stroke: 1px var(--fourth); */
+  font-family: 'Josefin Slab', serif;
+  font-size: 25px;
 }
- p {
-   margin-bottom: 50px;
-   text-align: center;
- }
 
+.footer-box {
+  background-color: black;
+  text-align: center;
+  margin: 10%;
+  opacity: 0.7;
+  color: var(--fourth);
+  font-family: 'Josefin Slab', serif;
+  font-size: 15px;
+}
 
- h2 {
+h2 {
   color: black bold;
-
 }
 
 footer {
   margin: 20px;
-  
+
   background: white;
 }
