starting to fix the clubspage if a user is not in a club

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
   at the
   same time.
   Search books from an extensive library to find the perfect new read and even add it to your own personal library.
-  You can also choose from a variety of different clubs based on genres that peak your interest and provides you
+  You can also choose from a variety of different clubs based on genres that pique your interest and provides you
   with different book suggestions.
   If you'd like to join wide world of books, please <a href="/login">Sign Up!</a></p>
 {{/if}}
