login form done

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,10 @@
 <div class="login-signup">
-  <form class="login-form card">
+  <form class="login-form card text-center">
     <div>
+      <div class="card-header">Login to Book Club</div>
       <label class="card-title" for="username-login">Username:</label>
       <input class="card-text" type="text" id="username-login" placeholder="Username" autocomplete="off" />
+
     </div>
     <div>
       <label class="card-title" for="password-login">Password:</label>
