--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,7 +111,7 @@ body {
   /* padding: 100px;
   margin: 200px;
   margin-left:400px; */
-  margin: 20% 20% 20% 10%;
+  margin: 20%;
   opacity: 0.7;
   color: var(--fourth);
   /* -webkit-text-stroke: 1px var(--fourth); */
@@ -161,4 +161,16 @@ footer {
   margin: 20px;
 
   background: white;
+}
+
+/* book search styling  */
+
+.book-search {
+  margin: 5% 30% 10%;
+  padding: 10px;
+  background-color: black;
+  opacity: 0.7;
+  color: var(--fourth);
+  font-family: "Josefin Slab", serif;
+  font-size: 15px;
 }
