--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -1,26 +1,28 @@
 <a href="/clubs-page">Clubs Page</a>
 <a href="/my-library">My Library</a>
-<a href="/book-search">Book Search</a> 
+<a href="/book-search">Book Search</a>
 <a href="/">Back to Homepage</a>
 <section>
-  <h2>Search for a Book to add into your Library!</h2>
-  <form method="GET" action="/book-search/search">
-  <div>
-    <label for="fname">Book Title:</label>
-    <input type="text" id="book_title" name="book_title" placeholder="Book Title" autocomplete="off">
+  <div class="book-search">
+  <form class="card text-center" method="GET" action="/book-search/search">
+  <div class="card-header">Search for a Book to add into your Library!</div>
+    <div>
+      <label class="card-title" for="fname">Book Title:</label>
+      <input class="card-text" type="text" id="book_title" name="book_title" placeholder="Book Title" autocomplete="off">
+    </div>
+    <div>
+      <label class="card-title" for="lname">Author:</label>
+      <input class="card-text" type="text" id="author" name="author" placeholder="Author" autocomplete="off">
+    </div>
+    <button class="btn btn-primary" type="submit">Search!</button>
+    <div id="search-err" class="hide-before-error">
+      Cannot leave search fields empty!
+    </div>
+  </form>
   </div>
-  <div>
-    <label for="lname">Author:</label><br>
-    <input type="text" id="author" name="author" placeholder="Author" autocomplete="off">
-  </div>
-  <button type="submit">Search!</button>
-  <div id="search-err" class="hide-before-error">
-    Cannot leave search fields empty!
-  </div>
-</form>
-<script src="/javascript/search-book.js"></script>
-<script src="/javascript/logout.js"></script>
-{{#if searchResults}}
-{{> book-info searchResults}}
-<script src="/javascript/add-book.js"></script>
-{{/if}}
+  <script src="/javascript/search-book.js"></script>
+  <script src="/javascript/logout.js"></script>
+  {{#if searchResults}}
+  {{> book-info searchResults}}
+  <script src="/javascript/add-book.js"></script>
+  {{/if}}
