changed the label for=

--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -6,11 +6,11 @@
   <h2>Search for a Book to add into your Library!</h2>
   <form method="GET" action="/book-search/search">
   <div>
-    <label for="fname">Book Title:</label>
+    <label for="book_title">Book Title:</label>
     <input type="text" id="book_title" name="book_title" placeholder="Book Title" autocomplete="off">
   </div>
   <div>
-    <label for="lname">Author:</label><br>
+    <label for="author">Author:</label><br>
     <input type="text" id="author" name="author" placeholder="Author" autocomplete="off">
   </div>
   <button type="submit">Search!</button>
