logged in navbar

--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -1,7 +1,7 @@
-<a href="/clubs-page">Clubs Page</a>
-<a href="/my-library">My Library</a>
-<a href="/book-search">Book Search</a>
-<a href="/">Back to Homepage</a>
+<a class="nav" href="/clubs-page">Clubs Page</a>
+<a class="nav" href="/my-library">My Library</a>
+<a class="nav" href="/book-search">Book Search</a>
+<a class="nav" href="/">Back to Homepage</a>
 <section>
   <div class="book-search">
   <form class="card text-center" method="GET" action="/book-search/search">
