nav bar updates

--- a/views/clubs-page.handlebars
+++ b/views/clubs-page.handlebars
@@ -1,7 +1,9 @@
-<a href="/clubs-page">Clubs Page</a>
-<a href="/my-library">My Library</a>
-<a href="/book-search">Book Search</a>
-<a href="/">Back to Homepage</a> 
+<ul>
+  {{!-- <li><a href="/clubs-page">Clubs Page</a></li> --}}
+  <li><a href="/my-library">My Library</a></li>
+  <li><a href="/book-search">Book Search</a></li>
+  <li><a href="/">Back to Homepage</a></li>
+</ul> 
   <section>
     {{#if userClub}}
     <h1 class="user-club">
