--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,9 @@
 {{#if loggedIn}}
-<a href="/clubs-page">Clubs Page</a>
-<a href="/my-library">My Library</a>
-<a href="/book-search">Book Search</a>
+<ul>
+  <li><a href="/clubs-page">Clubs Page</a></li>
+  <li><a href="/my-library">My Library</a></li>
+  <li><a href="/book-search">Book Search</a></li>
+</ul>
 <h2>Welcome back, <span class="username">{{username}}</span> </h2>
 {{else}}
 <p class="description-box">Welcome to Book Club! This app allows you to explore the world of books and join book clubs
