--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -1,7 +1,7 @@
 <ul>
   <li><a href="/clubs-page">Clubs Page</a></li>
   <li><a href="/my-library">My Library</a></li>
-  <li><a href="/book-search">Book Search</a></li>
+  {{!-- <li><a href="/book-search">Book Search</a></li> --}}
   <li><a href="/">Back to Homepage</a></li>
 </ul>
 <section>
