log out button fixed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <a href="/my-library">My Library</a>
         <a href="/book-search">Book Search</a> --}}
         <!-- logout button style -->
-        <button id="logout" class="btn-style">Logout</button>
+        <button id="logout" class="btn-style btn-primary">Logout</button>
         {{else}}
         <a href="/login">Login</a>
       </nav>
