--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,10 @@ li {
   padding: 20px;
 }
 
+ul {
+  margin-top: 10px;
+}
+
 .btn-primary,
 .btn-primary:hover,
 .btn-primary:active,
@@ -92,6 +96,7 @@ li {
   background-color: var(--main-color) !important;
   border-color: white;
   font-family: "Special Elite", cursive;
+  border-radius: 10px;
 }
 
 header {
