--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,10 @@
 font-family: 'Josefin Slab', serif; */
 
 :root {
-  --main-color: #2c3e50;
-  --second: #95a5a6;
-  --third: #95a5a6;
-  --fourth: #ecf0f1;
+  --main-color: #130F40;
+  --second: #C7ECEE;
+  --third: #4834D4;
+  --fourth: #F6E58D;
 }
 
 .border-top {
@@ -78,6 +78,13 @@ a:active {
   text-decoration: none;
   font-family: "Special Elite", cursive;
   color: white;
+  font-weight: bold;
+  font-size: 50px;
+
+}
+
+#book-club-title {
+  -webkit-text-stroke: 1px var(--main-color);
 }
 
 li {
@@ -106,9 +113,9 @@ header {
 
 body {
   background-color: black;
-  background-image: url("project2-7.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("project2-9.jpg");
+  /* background-repeat: no-repeat;
+  background-size: auto; */
 }
 
 /* homepage description */
@@ -183,4 +190,16 @@ footer {
   color: var(--fourth);
   font-family: "Josefin Slab", serif;
   font-size: 15px;
+}
+
+/* .overflow {
+  /* margin: 0; */
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
+  /* width: 1000px;
+  height: 500px; } */
+
+
+.overflow::-webkit-scrollbar {
+  display: none; 
 }
