starting on some user feedback they added a book to library

--- a/views/partials/book-info.handlebars
+++ b/views/partials/book-info.handlebars
@@ -26,7 +26,7 @@
           </label>
         </div>
         <div class="button-container">
-          <div id="add-btn-{{bookId}}">Add to My Library!</div>
+          <div id="add-btn-{{bookId}}">Add to My Library!</div><span class="hide-before-add">You added this book to your library!</span>
         </div>
       </form>
     </article> 
