--- a/views/partials/book-info.handlebars
+++ b/views/partials/book-info.handlebars
@@ -9,7 +9,9 @@
             {{#if imageLinks.smallThumbnail}}
             <img src="{{imageLinks.smallThumbnail}}">
             {{else}}
-            No Picture Available!
+            <div class="no-picture-text">
+              No Picture Available!
+            </div>
             {{/if}}
           </label>
         </div>
@@ -26,9 +28,8 @@
               Authors: {{authors}}
             </label>
           </p>
-          <div class="btn btn-primary button-container">
-            <div id="add-btn-{{bookId}}">Add to My Library!</div>
-          </div>
+            <div id="add-btn-{{bookId}}" class="btn btn-primary button-container">Add to My Library!</div>
+            <div id="add-msg-{{bookId}}" class="hide-before-add">You added this book to your library!</div>
         </div>
       </form>
     </article>
