--- a/views/partials/not-in-these-clubs.handlebars
+++ b/views/partials/not-in-these-clubs.handlebars
@@ -8,6 +8,7 @@
         <h3>
           {{dataValues.club_title}}
         </h3>
+        {{!-- user join club button submission form --}}
         <button>Join This Club!</button>
       </div>
       {{/each}}
